# strudel-llm-benchmarks

./: .gitignore  LICENSE  README.md  azure_llm_accessor.py  collect_all_models_data.py  file_smmmarizer.py  from_cache_to_db.py  generate_and_analyze_heatmaps.py  generate_and_anayze_heatmaps.py  generate_embedding.py  generate_embeddings_db_from_summaries_b.py  generate_file_summaries.py  generate_similarity_vector_for_single_model.py  generate_similary_mtx_from_embedding.py  generate_single_file_summaries.py  llm_factory.py  part_of_speach_analyzer.py  pyproject.toml  run_file_smmmarizer.old  run_file_smmmarizer.py
benchmark_code/: __init__.py  aws_boto3_llm_accessor.py  aws_boto3_titan_llm_accessor.py  aws_langchain_llm_accessor.py  azure_langchain_llm_accessor.py  azure_llm_accessor.py  cache_manager.py  create_summary_file.py  db_entry.py  embedding_accessor_langchain_HF.py  embedding_generator.py  file_smmmarizer.py  file_summarizer.py  llm_accessor.py  llm_factory.py  llm_model.py  llm_response.py  s3_accessor.py  similarity_matrix_generator.py  similatiry_analyzer.py  utils.py
code/: azure_llm_accessor.py  file_smmmarizer.py  llm_accessor.py  llm_factory.py  s3_accessor.py  utils.py
results/: 04-01-2025__gpt-35-turbo_gpt-4_gpt-4o__pytorch1_summary.json  04-01-2025__gpt-35-turbo_gpt-4_gpt-4o__pytorch2_summary.json  04-08-2025__eu.amazon.nova-lite-v1_0_eu.anthropic.claude-3-5-sonnet-20240620-v1_0_gpt-4o__summary.json  04-2025__Claude3.5_nova-lite-v1_nova-pro-v1_titan_premier_Llama3.3__summary.json  DB.json  all_embeddings_db.json  pytorch_DB.json  (+3 more)
(+18 files in other folders)
