[tool.poetry]
name = "strudel-llm-benchmarks"
version = "0.1.0"
description = "LLM benchmarks for code summarization"
authors = ["Shai Rubin"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.37"
langchain = "^0.3"
langchain_aws = "^0.2"
langchain_azure_ai = "^0.1"
langchain-huggingface = "^0.1.2"
langchain-google-genai = "^2.1.3"
dataclasses-json = "^0.6.7"
matplotlib = "^3.10.3"
pandas = "^2.2.3"
seaborn = "0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 